# pv-mpc-auction

./: .gitignore  LICENSE  README.md  make_comparison_fig.py  pyproject.toml  requirements.txt
notebooks/: PV_MPC_Auction_Colab.ipynb
solidity/: MPCAuction.sol  REMIX_GUIDE.md  deploy_and_run.py  gas_result_n5.json
src/pv_mpc_auction/: __init__.py  benchmark.py  chain_sim.py  group.py  pedersen.py  protocol.py  secgt.py  shamir.py
tests/: test_pedersen.py  test_protocol.py  test_secgt.py  test_shamir.py
