[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pv-mpc-auction"
version = "1.0.0"
description = "Privacy-preserving sealed-bid auction protocol: Pedersen commitments + Shamir sharing + Schnorr ZKPs, anchored to an Ethereum smart contract. Companion code for ICST 2026."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Sanjoy Chattopadhyay", email = "sanjoy.chattopadhyay@psit.ac.in"}
]
keywords = ["blockchain", "mpc", "auction", "pedersen", "shamir", "schnorr", "zkp"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security :: Cryptography",
  "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
chain = ["web3>=6.20", "py-solc-x>=2.0", "python-dotenv>=1.0", "eth-account>=0.10"]
plot = ["matplotlib>=3.7", "numpy>=1.24"]
test = ["pytest>=7.4", "pytest-cov>=4.1"]
dev  = ["pv-mpc-auction[chain,plot,test]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths  = ["tests"]
addopts    = "-v --tb=short"
